# live_verse_vosk

./: Makefile  README.md  THIRD_PARTY_NOTICES.md  install-windows.ps1  pyproject.toml  requirements.txt  run-liverse.cmd
docs/: DATA_PROVENANCE.md
models/: README.md
slide_display/: README.md  app.js  index.html  operator.css  operator.html  operator.js  styles.css
tools/: __init__.py  analyze_vosk_probe_logs.py  holyrics.py  slide_server.py  vosk_grammar_probe.py
